# starshard

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION-1X-TO-2X.md  MIGRATION-1X-TO-2X_CN.md  README.md  README_CN.md
.github/workflows/: Build.yml  rust-clippy.yml
benches/: bench_main.rs
examples/: mixed_workload_snapshot_tradeoff_demo.rs  snapshot_mode_cached_demo.rs  snapshot_mode_clone_demo.rs  snapshot_mode_cow_demo.rs  stress_test.rs  stress_test_async.rs  stress_test_mixed.rs  stress_test_transaction.rs  v080_async_batch.rs  v080_entry_api.rs  v090_lifecycle.rs  v101_advanced.rs  v210_rebalance.rs
scripts/: export_api_surface.sh  verify_feature_matrix.sh
src/: advanced.rs  async_impl.rs  error.rs  eviction.rs  lib.rs  rebalance.rs  serde_impl.rs  sync_impl.rs  types.rs
src/core/: async_impl.rs  helpers.rs  mod.rs  sync_impl.rs  types.rs
src/serde/: async_snapshot.rs  mod.rs  sync_serde.rs
src/tests/: async_tests.rs  batch.rs  mod.rs  snapshot.rs  sync.rs
tests/: test_v100_advanced.rs
