[package]
name = "starshard"
version = "0.5.0"
edition = "2024"
description = "A blazing-fast sharded concurrent HashMap using hashbrown and RwLock, with lazy shards, atomic length cache, and async support."
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/starshard"
homepage = "https://houseme.github.io/starshard"
documentation = "https://docs.rs/starshard"
keywords = ["concurrency", "hashmap", "hashbrown", "rwlock", "async"]
categories = ["concurrency", "data-structures"]
readme = "README.md"
resolver = "2"

[dependencies]
hashbrown = { version = "0.16", default-features = false }
rustc-hash = "2.1.1"
rayon = { version = "1", optional = true }
tokio = { version = "1.48.0", optional = true, default-features = false, features = ["sync", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = ["rayon"]
async = ["dep:tokio"]
rayon = ["dep:rayon", "hashbrown/rayon"]
serde = ["dep:serde", "hashbrown/serde"]
full = ["async", "rayon", "serde"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
