[package]
name = "starshard"
version = "1.1.0"
edition = "2024"
description = "A blazing-fast sharded concurrent HashMap using hashbrown and RwLock, with lazy shards, atomic length cache, async support, conditional operations, batch operations, TTL/metrics/transactions."
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/starshard"
homepage = "https://houseme.github.io/starshard"
documentation = "https://docs.rs/starshard"
keywords = ["concurrency", "hashmap", "hashbrown", "rwlock", "async"]
categories = ["concurrency", "data-structures"]
readme = "README.md"
resolver = "3"
exclude = ["/examples/*", "/tests/*"]

[dependencies]
hashbrown = { version = "0.16", default-features = false }
rustc-hash = "2.1"
rayon = { version = "1.11", optional = true }
tokio = { version = "1.50", optional = true, default-features = false, features = ["sync", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1" }

[features]
default = ["rayon"]
async = ["dep:tokio", "dep:async-trait"]
rayon = ["dep:rayon", "hashbrown/rayon"]
serde = ["dep:serde", "hashbrown/serde"]
lifecycle = []
advanced = ["dep:async-trait"]
full = ["async", "rayon", "serde", "lifecycle", "advanced"]

[dev-dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
async-trait = "0.1"
criterion = "0.8"
rand = "0.10.0-rc.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench_main"
harness = false
